# Project-task-management

Backend/app/: alembic.ini  pyproject.toml
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: bc8e48918ea0_tables.py
Backend/app/app/: main.py  model.py
Backend/app/app/api/api_v1/: api.py
Backend/app/app/api/api_v1/endpoints/: login.py  project.py  task.py  team.py  user.py
Backend/app/app/core/: config.py  security.py
Backend/app/app/core/security/: auth_bearer.py  auth_handler.py
Backend/app/app/crud/: crud_project.py  crud_task.py  crud_team.py  crud_user.py
Backend/app/app/db/: init_db.py
Backend/app/app/schemas/: project.py  relationship.py  task.py  team.py  user.py
